--- a/aula pratica 2/estilos/style.css
+++ b/aula pratica 2/estilos/style.css
@@ -8,7 +8,10 @@
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #e0e0e0;
+    background-color: #e9e9e9;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
 }
 .cabeca{
     display: flex;
@@ -20,11 +23,17 @@ body{
     margin: auto;
     margin-top: 50px;
 }
+.cabeca-link:hover{
+   border:  1px inset #ee2211;
+   box-sizing: border-box;
+   
+}
 .cabeca-nav{
     display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 20px;
+    word-wrap: wrap;
 }
 .cabeca-link{
     color: black;
@@ -43,11 +52,94 @@ body{
     margin: auto;
     
 }
-.content-h2::before{
-    width: 4px;
-    height: 4px;
-    color: red;
-}
 .content-img-bikcraft-img{
     width: 100%;
+}
+.content-txt{
+    text-align: right;
+    margin-top: 80px;
+    margin-right: 15px;
+    padding: px;
+
+}
+.content-txt-h2{
+    margin-bottom: 20px;
+}
+.content-txt-button{
+    color: white;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 12px 8px;
+    border-radius: 4px;
+    margin-top: 15px;
+    display: inline-block;
+    background-color: #ee2211;
+}
+.content-txt-button:hover{
+    background-color: #640f08;
+    border: 2px solid #e21;
+    transition: 0.1s;
+}
+.content-marca{
+    font-size: 2rem;
+    text-transform: uppercase;
+    text-align: right;
+    margin-right: 15px;
+    color: #a8a8a8 ;
+
+    background-image: url(../onda.svg);
+    background-color:#e9e9e9 ;
+    background-size: contain;
+    background-position: left center;
+
+    padding: 20px;
+    height: 350px;
+
+    
+    
+}
+.content-marca-h1{
+    
+    text-align: center;
+    margin-top: 100px;
+    
+}
+.content-vantage{
+    
+    margin-top: 25px;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+
+    
+}
+.content-vantage-img{
+    margin-right: 10px;
+
+}
+.content-vantage-txt{
+    text-align: left;
+    
+
+}.content-vantage-div1, .content-vantage-div2,.content-vantage-div3 {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin-bottom: 50px;
+    align-items: ;
+    width: 100%;
+    
+
+} 
+p > strong#negrito{
+    margin-bottom: 20px;
+}
+span{
+    font-weight: bold;
+    display: inline-block;
+    margin-bottom: 8px;
+}
+.content-vantage-div1:hover, .content-vantage-div2:hover, .content-vantage-div3:hover{
+    border: 1px inset #e21;
 }
