--- a/aula pratica 2/estilos/style.css
+++ b/aula pratica 2/estilos/style.css
@@ -22,10 +22,14 @@ body{
     text-align: center;
     margin: auto;
     margin-top: 50px;
+    font-size: 3rem;
 }
 .cabeca-link:hover{
-   border:  1px inset #ee2211;
+   box-shadow: inset 0px 0px 1px 1px #e21;
+   background-color: rgb(99, 99, 99);
+   color: white;
    box-sizing: border-box;
+
    
 }
 .cabeca-nav{
@@ -57,8 +61,8 @@ body{
 }
 .content-txt{
     text-align: right;
-    margin-top: 80px;
-    margin-right: 15px;
+    margin-top: 70px;
+    margin-right: 10px;
     padding: px;
 
 }
@@ -125,15 +129,15 @@ body{
 }.content-vantage-div1, .content-vantage-div2,.content-vantage-div3 {
     display: flex;
     flex-direction: row;
-    gap: 20px;
-    margin-bottom: 50px;
-    align-items: ;
-    width: 100%;
+    gap: 10px;
+    margin-bottom: 20px;
+    padding: 10px;
+    width: 98%;
     
 
 } 
 p > strong#negrito{
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 span{
     font-weight: bold;
@@ -141,5 +145,27 @@ span{
     margin-bottom: 8px;
 }
 .content-vantage-div1:hover, .content-vantage-div2:hover, .content-vantage-div3:hover{
-    border: 1px inset #e21;
+    box-sizing: border-box;
+    box-shadow: -3px 0px 0px 0px #e21;
+}
+.content-vantage-div1{
+    background-color: #dddddd;
+}
+.content-vantage-div3{
+    background-color: #dddddd;
+}
+.rodape-link{
+    color:tomato;
+    text-align: center;
+    font-weight: bold;
+    font-size: 0.8rem;
+    
+}
+.rodape{
+    margin: auto;
+    background-color: #a8a8a85e;
+    width: 100%;
+    text-align: center;
+    bottom: 0px;
+    padding:4px;
 }
