--- a/aula pratica 2/estilos/style.css
+++ b/aula pratica 2/estilos/style.css
@@ -26,7 +26,7 @@ body{
 }
 .cabeca-link:hover{
    box-shadow: inset 0px 0px 1px 1px #e21;
-   background-color: rgb(99, 99, 99);
+   background-color: rgba(99, 99, 99, 0.192);
    color: white;
    box-sizing: border-box;
 
