--- a/aula pratica 2/estilos/style.css
+++ b/aula pratica 2/estilos/style.css
@@ -6,12 +6,17 @@
     padding: 0px;
     box-sizing: border-box;   
 }
+html{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+}
 body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: #e9e9e9;
     display: flex;
     flex-direction: column;
     gap: 50px;
+    
 }
 .cabeca{
     display: flex;
@@ -37,7 +42,7 @@ body{
     flex-direction: row;
     justify-content: center;
     gap: 20px;
-    word-wrap: wrap;
+    flex-wrap: wrap;
 }
 .cabeca-link{
     color: black;
@@ -46,6 +51,7 @@ body{
     border: 2px solid white;
     padding: 15px 10px;
     border-radius: 4px;
+    flex-wrap: wrap;
     
 }
 .content{
@@ -58,18 +64,24 @@ body{
     
 }
 .content-img-bikcraft-img{
-    width: 100%;
+   width: 100%;
+   object-fit: cover;
+   height: 100%;
+  
 }
 .content-txt{
     text-align: right;
     margin-top: 70px;
     margin-right: 10px;
-    padding: px;
+    word-break: break-all;
+    
 
 }
 .content-txt-h2{
     margin-bottom: 20px;
     font-size: 1.8rem;
+    word-break: break-all;
+
 }
 .content-txt::before{
     content: "";
@@ -100,7 +112,7 @@ body{
     font-size: 2rem;
     text-transform: uppercase;
     text-align: right;
-    margin-right: 15px;
+    word-break: break-all;
     color: #a8a8a8 ;
 
     background-image: url(../onda.svg);
@@ -108,8 +120,8 @@ body{
     background-size: contain;
     background-position: left center;
 
-    padding: 20px;
-    height: 350px;
+    
+    
 
     
     
@@ -118,17 +130,21 @@ body{
     
     text-align: center;
     margin-top: 100px;
+    word-wrap: break-word;
     
 }
 .content-vantage{
     
-    margin-top: 25px;
     
+    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: baseline;
 
     
+}
+.content-img{
+    object-fit: cover;
 }
 .content-vantage-img{
     margin-right: 10px;
@@ -145,6 +161,7 @@ body{
     margin-bottom: 20px;
     padding: 10px;
     width: 98%;
+    word-break: break-all;
     
     
     
@@ -184,4 +201,28 @@ span{
     text-align: center;
     bottom: 0px;
     padding:4px;
+}
+@media (max-width: 750px ){
+    .content {
+        grid-template-columns: 1fr;
+        transition: 0.3s;
+    }
+    .content-txt{
+        margin-bottom: 15px;
+        text-align: center;
+    }
+    .content-txt::before{
+        display: none;
+    }
+    .content-marca-h1{
+        font-size: 3rem;
+        margin-bottom: 50px;
+    }
+
+}
+@media (max-width: 400px){
+    .content-marca-h1{
+        font-size: 2rem;
+        margin-bottom: 30px;
+    }
 }
