--- a/portfolio-origamid/estilo/style.css
+++ b/portfolio-origamid/estilo/style.css
@@ -5,5 +5,10 @@
 
 @import './header.css';
 
-@import '/introducao.css'
+@import '/introducao.css';
+
+@import '/experiencia.css';
+
+@import '/formacao.css';
+
 
