alter proejto bikcraft

--- a/bikecraft/estilo/style.css
+++ b/bikecraft/estilo/style.css
@@ -1,5 +1,15 @@
 @charset "utf-8";
 
+
+:root{
+
+    --color-primary: #e21 ;
+    --color-primary-dark: 
+
+    
+}
+
+
 *{
     margin: 0px;
     padding: 0px;
