--- a/aula pratica 2/estilos/style.css
+++ b/aula pratica 2/estilos/style.css
@@ -6,13 +6,42 @@
     padding: 0px;
     box-sizing: border-box;   
 }
+
+:root{
+    
+    --color-primary: #e21;
+    --color-primary-dark: #5a0f0f;
+    --color-body-1:#e9e9e9 ;
+    --color-body-2:#fff ; 
+    --onda:url(../onda.svg);
+    --color-button: #000000 ;
+    --marca-color: #b9b9b9 ;
+    --color-txt: #202020 ;
+
+
+}
+
+
+@media(prefers-color-scheme: dark){
+    :root{
+        --color-body-1: #111111;
+        --color-body-2: #000000;
+        --color-txt: #ffffff;
+        --detalhes-color:#333333 ;
+        --onda:url(../onda-escura.svg);
+        --color-button: #ffffff ;
+        --marca-color: #000000;
+    }
+    
+}
 html{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 }
 body{
+    color: var(--color-txt);
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #e9e9e9;
+    background-color: var(--color-body-1);
     display: flex;
     flex-direction: column;
     gap: 50px;
@@ -30,9 +59,9 @@ body{
     font-size: 3rem;
 }
 .cabeca-link:hover{
-   border-color: #e21;
-   background-color: rgba(99, 99, 99, 0.192);
-   color: white;
+   border-color: var(--color-primary);
+   background-color: var(--color-txt);
+   color: var(--color-body-2);
    box-sizing: border-box;
 
    
@@ -45,10 +74,10 @@ body{
     flex-wrap: wrap;
 }
 .cabeca-link{
-    color: black;
+    color: var(--color-txt);
     text-transform: uppercase;
-    background-color: white;
-    border: 2px solid white;
+    background-color: var(--color-body-2);
+    border: 2px solid var(--color-body-2);
     padding: 15px 10px;
     border-radius: 4px;
     flex-wrap: wrap;
@@ -57,7 +86,7 @@ body{
 .content{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    background-color: white;
+    background-color: var(--color-body-2);
     max-width: 1000px;
     
     margin: auto;
@@ -90,21 +119,21 @@ body{
     margin-left: -15px;
     width: 60px;
     height: 5px;
-    background-color: #e21;
+    background-color: var(--color-primary);
 }
 .content-txt-button{
-    color: white;
+    color: var(--color-button);
     font-weight: bold;
     text-transform: uppercase;
     padding: 12px 8px;
     border-radius: 4px;
     margin-top: 15px;
     display: inline-block;
-    background-color: #ee2211;
-    border:2px solid #e21 ;
+    background-color:var(--color-primary);
+    border:2px solid var(--color-primary);
 }
 .content-txt-button:hover{
-    background-color: #5a0f0f;
+    background-color: var(--color-primary-dark);
     border: 2px solid rgb(255, 95, 80);
     transition: 0.1s;
 }
@@ -113,10 +142,10 @@ body{
     text-transform: uppercase;
     text-align: right;
     word-break: break-all;
-    color: #a8a8a8 ;
-
-    background-image: url(../onda.svg);
-    background-color:#e9e9e9 ;
+    color: var(--marca-color);
+    
+    background-image: var(--onda);
+    background-color:var(--color-body-1) ;
     background-size: contain;
     background-position: left center;
 
@@ -178,14 +207,14 @@ span{
 .content-vantage-div1:hover, .content-vantage-div2:hover, .content-vantage-div3:hover{
     box-sizing: border-box;
    
-    border-left: 4px solid #e21;
+    border-left: 4px solid var(--color-primary);
     
 }
 .content-vantage-div1{
-    background-color: #dddddd;
+    background-color: var(--detalhes-color);
 }
 .content-vantage-div3{
-    background-color: #dddddd;
+    background-color: var(--detalhes-color);
 }
 .rodape-link{
     color:tomato;
